# Beralix

./: AUTHORS  Authors  Beralix-license  GNU-General-Public-License  HACKING  LICENSE  License  README  makeiso.sh
i386/: README.diskdefines  autorun.inf  md5sum.txt
i386-squashfs-root/: initrd.img  vmlinuz
i386-squashfs-root/boot/: System.map-3.0.0-12-generic  abi-3.0.0-12-generic  config-3.0.0-12-generic  vmcoreinfo-3.0.0-12-generic
i386-squashfs-root/etc/: bash.bashrc  brlapi.key  ca-certificates.conf  colord.conf  environment  group  gshadow  hdparm.conf  issue  issue.net  kernel-img.conf  kerneloops.conf  ld.so.cache  lsb-release  mailcap  passwd  popularity-contest.conf  profile  request-key.conf  rsyslog.conf  sensors3.conf  shadow  sudoers  updatedb.conf
i386-squashfs-root/lib/: libatasmart.so.4  libatasmart.so.4.0.3  libbrlapi.so.0.5  libbrlapi.so.0.5.5  libbsd.so.0.3.0  libbz2.so.1.0.4  libcap.so.2  libcap.so.2.21  libdevmapper-event.so.1.02.1  libdevmapper.so.1.02.1  libdmraid.so.1.0.0.rc16  libfuse.so.2.8.4  libhandle.so.1.0.3  libhistory.so.6.2  libip4tc.so.0.0.0  libip6tc.so.0.0.0  libipq.so.0.0.0  libipq_pic.so.0  libipq_pic.so.0.0.0  libiptc.so.0.0.0  libiw.so.30  liblvm2app.so.2.2  libncurses.so.5.9  libncursesw.so.5.9  libnih-dbus.so.1.0.0  libnih.so.1.0.0  libnss_mdns.so.2  libnss_mdns4.so.2  libnss_mdns6.so.2  (+21 more)
i386-squashfs-root/usr/share/doc/python-telepathy/examples/: Makefile.am  README  account.py  aliases.py  call.py  chatroom.py  file-transfer.py  generate-manager-file.py  roomlist.py  roster.py  tube-dbus-muc.py  tube-stream-muc.py
(+44079 files in other folders)
