EXTRA_DIST = \
	account.py \
	call.py \
	file-transfer.py \
	roomlist.py \
	tube-dbus-muc.py \
	aliases.py \
	chatroom.py \
	generate-manager-file.py \
	roster.py \
	tube-stream-muc.py
	avatar.py \
	connections.py \
	message.py \
	stream_tube_client.py \
	tube-stream-private.py
	call-gtk.py \
	deny.py \
	register.py \
	tubeconn.py \
	watch.py
